cabal-version:      2.4
name:               typed-lua
version:            0.1.0.0
homepage:           https://github.com/m4xine/typed-lua
bug-reports:        https://github.com/m4xine/typed-lua/issues
license:            CC0-1.0
author:             m4xine
maintainer:         maxined@pm.me
category:           Compilers/Interpreters

executable typed-lua
    main-is:            Main.hs
    other-modules:      
        Source,
        Syntax,
        Parser 
    build-depends:      
        base ^>=4.14.3.0,
        text ^>=1.2,
        megaparsec ^>=9.2.1
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
        RecordWildCards,
        OverloadedStrings
    ghc-options: -Wall